--- a/exercises/10-polished-example/packages.bib
+++ b/exercises/10-polished-example/packages.bib
@@ -3,90 +3,211 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2018},
+  year = {2024},
   url = {https://www.R-project.org/},
 }
+
 @Manual{broom,
-  title = {broom: Convert Statistical Analysis Objects into Tidy Tibbles},
-  author = {David Robinson and Alex Hayes},
-  year = {2018},
-  note = {R package version 0.5.0},
-  url = {https://CRAN.R-project.org/package=broom},
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2023},
+  note = {R package version 1.0.5},
+  url = {https://broom.tidymodels.org/},
 }
+
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2018},
-  note = {R package version 0.7.6},
-  url = {https://CRAN.R-project.org/package=dplyr},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+  year = {2023},
+  note = {R package version 1.1.4},
+  url = {https://dplyr.tidyverse.org},
 }
+
 @Manual{forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2018},
-  note = {R package version 0.3.0},
-  url = {https://CRAN.R-project.org/package=forcats},
+  year = {2023},
+  note = {R package version 1.0.0, 
+https://github.com/tidyverse/forcats},
+  url = {https://forcats.tidyverse.org/},
 }
+
 @Manual{ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
-  year = {2018},
-  note = {R package version 3.0.0},
-  url = {https://CRAN.R-project.org/package=ggplot2},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington and Teun {van den Brand}},
+  year = {2024},
+  note = {R package version 3.5.1, 
+https://github.com/tidyverse/ggplot2},
+  url = {https://ggplot2.tidyverse.org},
 }
+
 @Manual{knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2018},
-  note = {R package version 1.20},
-  url = {https://CRAN.R-project.org/package=knitr},
+  year = {2024},
+  note = {R package version 1.46},
+  url = {https://yihui.org/knitr/},
 }
+
+@Manual{lubridate,
+  title = {lubridate: Make Dealing with Dates a Little Easier},
+  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
+  year = {2023},
+  note = {R package version 1.9.3, 
+https://github.com/tidyverse/lubridate},
+  url = {https://lubridate.tidyverse.org},
+}
+
 @Manual{purrr,
   title = {purrr: Functional Programming Tools},
-  author = {Lionel Henry and Hadley Wickham},
-  year = {2018},
-  note = {R package version 0.2.5},
-  url = {https://CRAN.R-project.org/package=purrr},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2023},
+  note = {R package version 1.0.2},
+  url = {https://purrr.tidyverse.org/},
 }
+
 @Manual{readr,
   title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester and Romain Francois},
-  year = {2017},
-  note = {R package version 1.1.1},
-  url = {https://CRAN.R-project.org/package=readr},
+  author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+  year = {2024},
+  note = {R package version 2.1.5},
+  url = {https://readr.tidyverse.org},
 }
+
 @Manual{rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
-  year = {2018},
-  note = {R package version 1.10},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2024},
+  note = {R package version 2.26, 
+https://pkgs.rstudio.com/rmarkdown/},
+  url = {https://github.com/rstudio/rmarkdown},
 }
+
 @Manual{stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
-  year = {2018},
-  note = {R package version 1.3.1},
-  url = {https://CRAN.R-project.org/package=stringr},
+  year = {2023},
+  note = {R package version 1.5.1, 
+https://github.com/tidyverse/stringr},
+  url = {https://stringr.tidyverse.org},
 }
+
 @Manual{tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2018},
-  note = {R package version 1.4.2},
-  url = {https://CRAN.R-project.org/package=tibble},
+  year = {2023},
+  note = {R package version 3.2.1},
+  url = {https://tibble.tidyverse.org/},
 }
+
 @Manual{tidyr,
-  title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
-  author = {Hadley Wickham and Lionel Henry},
-  year = {2018},
-  note = {R package version 0.8.1},
-  url = {https://CRAN.R-project.org/package=tidyr},
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
+  year = {2024},
+  note = {R package version 1.3.1},
+  url = {https://tidyr.tidyverse.org},
 }
+
 @Manual{tidyverse,
-  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
+  title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2017},
-  note = {R package version 1.2.1},
-  url = {https://CRAN.R-project.org/package=tidyverse},
+  year = {2023},
+  note = {R package version 2.0.0, 
+https://github.com/tidyverse/tidyverse},
+  url = {https://tidyverse.tidyverse.org},
 }
+
+@Manual{visdat,
+  title = {visdat: Preliminary Visualisation of Data},
+  author = {Nicholas Tierney},
+  year = {2023},
+  note = {R package version 0.6.0, 
+https://github.com/ropensci/visdat},
+  url = {https://docs.ropensci.org/visdat/},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
+}
+
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+}
+
+@Article{lubridate2011,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/},
+}
+
+@Book{rmarkdown2018,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  isbn = {9781138359338},
+  url = {https://bookdown.org/yihui/rmarkdown},
+}
+
+@Book{rmarkdown2020,
+  title = {R Markdown Cookbook},
+  author = {Yihui Xie and Christophe Dervieux and Emily Riederer},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2020},
+  isbn = {9780367563837},
+  url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{tidyverse2019,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
+}
+
+@Article{visdat2017,
+  title = {visdat: Visualising Whole Data Frames},
+  author = {Nicholas Tierney},
+  doi = {10.21105/joss.00355},
+  url = {http://dx.doi.org/10.21105/joss.00355},
+  year = {2017},
+  publisher = {Journal of Open Source Software},
+  volume = {2},
+  number = {16},
+  pages = {355},
+  journal = {JOSS},
+}
+
