--- a/appendix-faq.qmd
+++ b/appendix-faq.qmd
@@ -2,10 +2,6 @@
 
 ( A place for questions)
 
-
 ## How can I include a screenshot of an interactive graphic in PDF or Word?
 
-You might wish to include a screenshot of an interactive graphic you had in your HTML document. To do this, you will need the webshot package, and will need the following code in your rmarkdown document.
-
-I recommend using the `webshot` package.
-
+You might wish to include a screenshot of an interactive graphic you had in your HTML document. To do this, you can use the webshot2 package
