--- a/using-qmd.qmd
+++ b/using-qmd.qmd
@@ -240,7 +240,7 @@ What's great about this is that if your data changes upstream, then you don't ne
 ## Creating a Quarto document
 
 * Rstudio menu system
-* Explore the template provided by RStudio
+* Explore the template provided by Rstudio
 * Compile an Quarto document
 
 ## Working with a Quarto document
