--- a/installation.qmd
+++ b/installation.qmd
@@ -50,7 +50,7 @@ install.packages("usethis")
 
 ## A note on PDF
 
-Quarto documents can be compiled to PDF, which is a great feature. In order to convert the documents to PDF, they use a software called LaTeX ($\LaTeX$) (pronounced la-tek or lay-tek - the `k` comes from the `X` being chi - $\chi$). 
+Quarto documents can be compiled to PDF, which is a great feature. In order to convert the documents to PDF, they use a software called LaTeX (pronounced la-tek or lay-tek).
 
 Installing LaTeX is thankfully handled when you install Quarto, as [Quarto includes a built-in Latexmk engine](https://quarto.org/docs/output-formats/pdf-engine.html#latexmk). 
 
