--- a/why-qmd.qmd
+++ b/why-qmd.qmd
@@ -101,14 +101,15 @@ With very little marking up, we can create rich text, that **actually resembles*
 
 Some other nice features of Markdown include:
 
-|       feature |                                              markdown | rendered                                            |
-|--------------------------:|-----------------------:|:---------------------|
-|   superscript |                                               `2^nd^` | 2^nd^                                               |
-|     subscript |                                               `CO~2~` | CO~2~                                               |
-| strikethrough |                                         `~~mistake~~` | ~~mistake~~                                         |
-|         links | `[text](http:://www.example.com/your-link-goes-here)` | [text](http:://www.example.com/your-link-goes-here) |
-|        images |                           `![alternative text](https://quarto.org/)` | ![alternative text](https://quarto.org/)                         |
-| footnote(s)     | `[^1]` followed by `[^1]: footnote text goes here`.| [^1] followed by [^1]: footnote text goes here. |
+| Feature       | Markdown                                 | rendered                    |
+|---------------|------------------------------------------|-----------------------------|
+| superscript   | `2^nd^`                                  | 2^nd^                       |
+| subscript     | `CO~2~`                                  | CO~2~                       |
+| strikethrough | `~~mistake~~`                            | ~~mistake~~                 |
+| links         | `[text](https://quarto.org/)`            | [text](https://quarto.org/) |
+| images        | `![alternative text](link-to-image)`     | (cannot render in a table)  |
+
+<!-- | footnote(s)     | `[^1]` followed by `[^1]: footnote text goes here`.| [^1] followed by [^1]: footnote text goes here. | -->
 
 # What about Rmarkdown?
 
@@ -160,7 +161,7 @@ knitr::include_graphics("figs/qmd-report-example.png")
 
 How did we generate it?
 
-````{markdown}
+```{markdown}
 ---
 title: "Exploring gapminder"
 author: "Nicholas Tierney"
@@ -168,47 +169,37 @@ format: html
 ---
 
 
-```{r}
 #| label: library
 library(tidyverse)
 library(broom)
-```
 
-```{r}
 #| label: data-read-in
 data <- read_csv(here::here("data/oz_gapminder.csv"))
-```
 
 # Introduction
 
 let's look at the lifespan
 
-```{r}
 #| label: hist-life-exp
 hist(data$lifeExp)
-```
 
 Let's fit a simple linear model of the effect of year on life expectancy
 
-```{r}
 #| label: example-lm
 fit <- lm(lifeExp ~ year, data = data)
 fit
-```
 
 And let's look at the coefficient table:
 
-```{r}
 #| label: coef-table
 library(broom)
 fit_coef <- tidy(fit)
 knitr::kable(fit_coef,
              caption = "A table of the coefficients")
-```
 
 The effect of year on life expectancy is `` `r  fit_coef$estimate[2]` ``.
 
-````
+```
 
 We *render* this code and it creates this report!
 
