--- a/common-problems.qmd
+++ b/common-problems.qmd
@@ -2,9 +2,7 @@
 
 There are some things that I run into fairly frequently (and some not so much) when I'm rendering my Quarto documents. This section details some the common problems, and the solution that I have found works for me.
 
-If you want to practice on fixing broken Quarto documents, check out some pathologically broken examples on github at
-
-[njtierney/qmd-errors](https://github.com/njtierney/qmd-errors).
+If you want to practice on fixing broken Quarto documents, check out some pathologically broken examples on github at [github.com/njtierney/qmd-errors](https://github.com/njtierney/qmd-errors).
 
 ## Avoiding problems
 
